--- a/less/home-page.less
+++ b/less/home-page.less
@@ -2,6 +2,10 @@
 
 .home {
 
+  @media mobile {
+    margin: 0% 1%;
+  }
+
   .intro {
 
     img {
@@ -66,11 +70,13 @@
       flex-direction: column-reverse;
       align-items: center;
       width: 100%;
-      padding: 0px 10px;
+      padding: 5% 15px;
+      margin-top: 30px;
     }
 
     .walk-text {
       width: 50%;
+      padding-top: 5%;
 
       @media @phone {
         width: 100%;
@@ -89,7 +95,7 @@
 
         @media @phone {
           width: 100%;
-          padding: 5%;  
+          padding: 3%;  
         }
       }
     }
@@ -100,7 +106,7 @@
 
       @media @phone {
         width: 100%;
-        padding: 5%;
+        margin-left: 0%;
       }
       
       img {
